# ddworktree

./: .gitignore  README.md  dd-task.md  ddworktree_design_spec.md  pyproject.toml
ddworktree/: __init__.py  __main__.py  cli.py  core.py
ddworktree/commands/: __init__.py  add.py  cherry_pick.py  clone.py  commit.py  config.py  diff.py  doctor.py  drift.py  fetch.py  logs.py  merge.py  mv.py  pair.py  pull.py  push.py  rebase.py  reset.py  restore.py  rm.py  status.py  sync.py  unpair.py
ddworktree/utils/: __init__.py  diff.py  gitignore.py
tests/: __init__.py  test_core.py  test_utils.py
